--- a/forum/templates/create_forum_post.html
+++ b/forum/templates/create_forum_post.html
@@ -1,29 +1,35 @@
 {% extends "base.html" %}
-
 {% block meta %}
     <title>FORUM</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-{% endblock %}
-
+{% endblock meta %}
 {% block content %}
-    <div class="container">
-        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh">
-            <h3 class="mb-5">Create a discussion</h3>
-            <form action="" method="post" class="w-50 mx-auto">
+    <div class="container px-4 mx-auto">
+        <div class="flex flex-col items-center justify-center h-screen">
+            <h3 class="mb-8 text-2xl font-semibold text-center">Create a post</h3>
+            <form action="" method="post" class="w-1/2 mx-auto">
                 {% csrf_token %}
                 <div class="mb-3">
-                    <label for="{{ form.title.id_for_label }}" class="form-label">Title</label>
-                    <input type="text" name="{{ form.title.name }}" id="{{ form.title.id_for_label }}" class="form-control">
+                    <label for="{{ form.title.id_for_label }}"
+                           class="block mb-2 text-sm font-medium">Title</label>
+                    <input type="text"
+                           id="{{ form.title.id_for_label }}"
+                           class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                           name="{{ form.title.name }}"
+                           value="{{ form.title.value|default:'' }}">
                 </div>
                 <div class="mb-3">
-                    <label for="{{ form.content.id_for_label }}" class="form-label">Content</label>
-                    <textarea name="{{ form.content.name }}" id="{{ form.content.id_for_label }}" class="form-control" style="height: 30vh"></textarea>
+                    <label for="{{ form.content.id_for_label }}"
+                           class="block mb-2 text-sm font-medium">Content</label>
+                    <textarea id="{{ form.content.id_for_label }}"
+                              class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                              name="{{ form.content.name }}"
+                              rows="10">{{ form.content.value|default:'' }}</textarea>
                 </div>
-                <button type="submit" class="d-block w-100 btn btn-primary">Send</button>
+                <button type="submit"
+                        class="w-full px-4 py-2 text-base font-semibold text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
+                    Create
+                </button>
             </form>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 {% endblock content %}
-    
