--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -26,7 +26,7 @@
             </div>
           {% endfor %}
           <div>
-            <input class="btn w-full bg-[#67BAC6] text-white font-main py-2 px-4 rounded-lg cursor-pointer transition-all duration-200 hover:bg-[#8CBEAA] hover:scale-105" type="submit" name="submit" value="Daftar" />
+            <input class="btn w-full bg-[#67BAC6] text-white font-main py-2 px-4 rounded-lg cursor-pointer transition-all duration-200 hover:bg-[#8CBEAA] hover:scale-105" type="submit" name="submit" value="Register" />
           </div>
         </div>
       </form>
