--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -83,6 +83,10 @@
           }
       });
 
+
+      console.log("panjangnya adalah ");
+      console.log(filteredEntries.length);
+
       if (filteredEntries.length === 0) {
         htmlString = `
         <div class="flex items-center justify-center mt-24 space-x-4 ml-8">
