--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -7,13 +7,13 @@
     <div id="product_cards"></div>
     <div class="flex justify-end mt-4 w-full max-w-7xl p-5">
     <div style="margin-right: 400px;">
-      <select id="sortDropdown" style="text-align: center;" class="bg-[#f09027] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:bg-[#b85c2c] hover:scale-101 mt-4">
+      <select id="sortDropdown" style="text-align: center;" class="bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:bg-[#b85c2c] hover:scale-101 mt-4">
         <option value="ascending">Sort by Price: Ascending</option>
         <option value="descending">Sort by Price: Descending</option>
         <option value="atoz">Sort by Alphabet: A - Z</option>
         <option value="ztoa">Sort by Alphabet: Z - A</option>
       </select>
-      <select id="categoryDropdown" style="text-align: center;" class="bg-[#f09027] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:bg-[#b85c2c] hover:scale-101 mt-4">
+      <select id="categoryDropdown" style="text-align: center;" class="bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:bg-[#b85c2c] hover:scale-101 mt-4">
         <option value="all">All Categories</option>
         <option value="FnB">FnB</option>
         <option value="Dekorasi">Dekorasi</option>
