--- a/display/templates/view_product.html
+++ b/display/templates/view_product.html
@@ -17,7 +17,7 @@
                         <div class="space-y-4">
                             <div class="flex items-center">
                                 <span class="text-gray-600 font-semibold w-24">Price:</span>
-                                <span class="text-2xl font-bold text-gray-800">${{ product.price }}</span>
+                                <span class="text-2xl font-bold text-gray-800">Rp{{ product.price }}</span>
                             </div>
                             
                             <div class="flex items-center">
