done note in cart

--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -38,8 +38,12 @@
         </ul>
       {% endif %}
       <p class="text-center font-main mt-6 text-gray-800">
-        Already have an account?
-        <a href="{% url 'authentication:login' %}" class="text-[#67BAC6] hover:underline">Login instead</a>
+        Sudah punya akun?
+        <a href="{% url 'authentication:login' %}" class="text-[#67BAC6] hover:underline">Login saja</a>
+      </p>
+      <p class="text-center font-main text-gray-800">
+        Saya ingin lihat-lihat saja.
+        <a href="{% url 'display:display_main' %}" class="text-[#67BAC6] hover:underline">Masuk tanpa akun</a>
       </p>
     </div>
   </div>
