--- a/review/templates/edit_review.html
+++ b/review/templates/edit_review.html
@@ -31,7 +31,7 @@
           {% endfor %}
           <div class="flex justify-center mt-6">
               <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
-                  Save
+                  Edit Review
               </button>
           </div>
       </form>
