feat: Admin View Implemented (View, Create, Edit, Delete)

--- a/adminview/templates/main.html
+++ b/adminview/templates/main.html
@@ -127,26 +127,21 @@
         }
         document.getElementById("product_cards").innerHTML = htmlString;
     }
-
   
     refreshProduct();
     const modal = document.getElementById('crudModal');
     const modalContent = document.getElementById('crudModalContent')
 
     function showModal() {
-      const modal = document.getElementById('crudModal');
-      const modalContent = document.getElementById('crudModalContent');
-
       modal.classList.remove('hidden'); 
       setTimeout(() => {
         modalContent.classList.remove('opacity-0', 'scale-95');
         modalContent.classList.add('opacity-100', 'scale-100');
         }, 50); 
     }
+    document.querySelector('[data-modal-target="crudModal"]').addEventListener('click', showModal);
 
     function hideModal() {
-      const modal = document.getElementById('crudModal');
-      const modalContent = document.getElementById('crudModalContent');
 
       modalContent.classList.remove('opacity-100', 'scale-100');
       modalContent.classList.add('opacity-0', 'scale-95');
